--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,5 +3,7 @@ eclipse.project.name = appName + '-core'
 
 dependencies {
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
+    api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+    api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 }
